2009-03-31	Mike Massonnet
Save/Load the history in the correct order

	- panel-plugin/panel-plugin.c(panel_plugin_save):
		Obviously I was sure I did that already, but then no trace in
		the logs, so once again, the history was displayed in the
		reverse order each time the plugin restarted, so the list is
		reversed before being saved.  Also free the memory allocated
		to texts as it has to even if there is no texts to be saved.

2009-03-30	Mike Massonnet
Redesign the actions settings dialog

	- panel-plugin/settings-dialog.glade:
		Unify the commands and the actions dialog.  Add a refresh
		button for the command (makes the commands editable).
	- panel-plugin/panel-plugin.c:
		Implement the new callbacks.  Set the settings dialog
		back to transient and put it inside a window group (cause
		gtk_dialog_run makes the dialog modal, cf. bug #4977).
	- panel-plugin/xfce4-clipman-actions.xml.in:
		Change the regex' a little bit.

2009-02-11	Mike Massonnet
Add i18n support for the default XML actions file.

	- panel-plugin/actions.c, panel-plugin/xfce4-clipman-actions.xml.in,
	panel-plugin/Makefile.am:
		Make it possible to have the action and command names
		translated inside the settings dialog just like it is done
		with the Thunar User Custom Actions.
	- panel-plugin/xfce4-clipman-actions.xml:
		This file is now auto-generated, delete it.
	- po/POTFILES.in:
		Add the new .xml.in file to the list of files to translate.

2009-01-30	Mike Massonnet
Drop the idea of an icon for an action.

	- panel-plugin/panel-plugin.c, panel-plugin/actions.c,
	panel-plugin/actions.h:
		Remove the code that was intended to show an icon for an
		action.  It is more a waste of time to set it, and not that
		useful inside the menu.

2009-01-30	Mike Massonnet
Add support for GLib < 2.16 for the commands treeview.

	- panel-plugin/panel-plugin.c:
		New function __foreach_command_fill_commands for versions of
		GLib prior to 2.16.

2009-01-30	Mike Massonnet
Fix a crasher.
